# V4L2_readCamera

./: 20190409camera.kdev4  README.md
.kdev4/: 20190409camera.kdev4
20190409/: CMakeLists.txt  capture.cpp
Linux_camera/: Linux╧╡═│.kdev4
Linux_camera/MJPEG┬╝╧ё┤·┬ы/: main  main.c
Linux_camera/camera/: main  main.c
Linux_camera/camera_c++/: CMakeLists.txt
Linux_camera/camera_c++/src/: main.cpp
Linux_camera/luvcview-0.2.4/: luvcview  luvcview.c
my_image_transport/launch/: my_image_transport.launch
my_image_transport/src/: my_publisher.cpp
undistortimage_xk/: CMakeLists.txt  package.xml
undistortimage_xk/data/: usb_xk1_640_480 .yml
undistortimage_xk/launch/: undistortimage.launch
undistortimage_xk/src/: undistortimage_xk.cpp
ws/: ws.kdev4
ws/.kdev4/: ws.kdev4
ws/devel/: .catkin  .rosinstall  setup.sh
ws/devel/lib/pkgconfig/: read_camera.pc
ws/devel/lib/read_camera/: read_camera_node
ws/devel/share/read_camera/cmake/: read_cameraConfig.cmake
ws/src/: src.kdev4
ws/src/.kdev4/: src.kdev4
ws/src/read_camera/: CMakeLists.txt
ws/src/read_camera/data/: usb_xk1_640_480 .yml
ws/src/read_camera/include/read_camera/: read_camera.h
ws/src/read_camera/launch/: read_camera.launch
ws/src/read_camera/src/: read_camera.cpp
